--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,8 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.DayNight" />
+    <style name="AppTheme.AppBarOverlay" parent="Theme.AppCompat.DayNight" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight" />
+    <style name="AppTheme.PopupOverlay" parent="Theme.AppCompat.DayNight" />
 
 </resources>
